# ot-harjoitustyo

./: ..gitignore.swp  .coverage  .coveragerc  .gitignore  README.md  highscores.db  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  kayttoohje.md  photosources.md  photosources.txt  testaus.md  työaikakirjanpito.md  työpäiväkirja.md  työpäiväkirja.mp  vaatimusmaarittely.md
dokumentaatio/alustava_määrittelydokumentti/: vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
src/: cell.py  field.py  game.py  game_over.py  gamemenu.py  highscores.db  highscores.py  highscores_menu.py  initialize_database.py  instructions.py  level.py  load_image.py  minesweeper.py  ms-1.py  ms-2.py  ms-3.py  ms-4.py  ms-5.py  ms-6.py  ms-7.py  ms-8.py  ms-flag.py  ms-mine.py  ms-opened.py  ms-questionmark.py  ms-unopened.py
src/databasemodules/: highscore_handling.py  highscores.db  highscores.py
src/gamemodules/: cell.py  field.py  game.py
src/menumodules/: gamemenu.py  highscores_menu.py  mainmenu.py
src/othermodules/: highscores_page.py  instructions.py
src/tests/: .__init__.py.swp  cell_test.py  field_test.py  game_test.py  gamemenu_test.py  highscore_menu_test.py  highscores_page_test.py  instructions_test.py  level_test.py  mainmenu_test.py  minesweeper_test.py
